tests/golden/type_errors/typed_array_member_push_mismatch.cd
let xs: [number] = [1];
xs.push("bad");
